--- a/main.tex
+++ b/main.tex
@@ -107,8 +107,8 @@ A brief biographical sketch of the student is required as part of each thesis.
 % This starts regular page counting in Arabic numerals
 \mainmatter
 
-% This starts double-spaced text.  Opposite command is \singlespace
-\doublespace
+% This starts double-spaced text.  Opposite command is \singlespacing
+\doublespacing
 
 
 % OK. Everything is set up. Insert your thesis below.
