2 single spaces between Acknowledgements title and text
References issue #1

--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -266,20 +266,19 @@
 
     \newcommand{\acknowledgmentspage}{%
       \if \UTPAField@Acknowledgments
-        \relax
+       \relax
       \else
         \newgeometry{top=2in, bottom=1in, left=1in, right=1in}
         \thispagestyle{fancy}
-        \singlespacing
-        {\centering%
-        ACKNOWLEDGMENTS\\
-        \vspace{\baselineskip}
-        \par
-        }
-        \addcontentsline{toc}{chapter}{Acknowledgments}
+        {\centering
+          ACKNOWLEDGMENTS
+        \par}
+      \vspace{\baselineskip}
+         \small\normalsize%
+         \addcontentsline{toc}{chapter}{Acknowledgments}
         {\setlength{\parindent}{0.5in}
-        \doublespacing
-        \UTPAField@Acknowledgments\par
+          \doublespacing
+          \UTPAField@Acknowledgments
       }
         \restoregeometry
         \insertblankpage
