2 single spaces between Dedication title and text
References issue #1

--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -229,15 +229,14 @@
       \else
         \newgeometry{top=2in, bottom=1in, left=1in, right=1in}
         \thispagestyle{fancy}
-        \singlespacing
         {\centering
         DEDICATION
         \par}
-      \vspace{2\baselineskip}
+      \vspace{\baselineskip}
          \small\normalsize%
         \addcontentsline{toc}{chapter}{Dedication}
-          \doublespacing
         {\setlength{\parindent}{0.5in}
+          \doublespacing
         \UTPAField@Dedication
       }
         \restoregeometry
