Move date up in Committee page
Moves the date up by adding 5 blank lines below
the date.  This increases the lower margin more 
than 1 inch. However, it is more consistent with 
the example document in the thesis manual.

--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -158,6 +158,7 @@
                 \vfill
         \fi
         \mbox{\UTPAField@Month~\UTPAField@Year} \\
+        \vspace{5\baselineskip}  % skip 5 lines to line up with previous page
         \par
       }
         \restoregeometry
