Fix spacing issue (between lines) in titlepage
This fixes an issue where the doublespacing in the
title was ended by a singlespacing command before 
the title was fully printed.  This explicitly ends 
the paragraph before the singlespacing command 
takes effect.

--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -95,7 +95,7 @@
         \thispagestyle{empty}
         {\centering
           \doublespacing
-        \UTPAField@UppercaseTitle
+        \UTPAField@UppercaseTitle\par
         \singlespacing
         \vfill  % provides equal spacing
         A \UTPAField@DocName \\
