Add \usepackage{docmute} to main.tex
With the docmute package, LyX users can export their
document and \input it directly without modification.

--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 % Make hyperref and showkeys come at the end of your loaded packages
 % to make sure they are not over-written.  They redefine many
 % standard LaTeX commands
+\usepackage{docmute} % for inputting complete documents. Useful for LyX users
 \usepackage{booktabs} % for better tables
 \usepackage{microtype} % for better typography
 \usepackage[colorlinks=false]{hyperref}  % for urls
