Attempt to spacing after heading of Biograpical Sketch Page
The manual states that the spacing after the header should be
"2 single spaces".  In reality, it's 0.5 inches.

--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -253,7 +253,8 @@
         {\centering
         BIOGRAPHICAL SKETCH
         \par}
-      \vspace{\baselineskip}
+      \vspace{-\baselineskip}
+      \vspace{0.5in}
          \small\normalsize%
         \addcontentsline{toc}{chapter}{Biographical Sketch}
           \doublespacing
