Fix top margin of Table of Contents.
The top margin of the table of contents should be 2in.  I'm
setting it here to 1.125 inches because that produces the desired
result.

--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -352,6 +352,8 @@
       \providecommand\phantomsection{} \phantomsection
       \addcontentsline{toc}{chapter}{Table of Contents}
       \singlespacing
+      % top margin should be 2inches
+      \newgeometry{top=1.125in, bottom=1in, left=1in, right=1in}
       \TEMPtableofcontents
       \doublespacing
         \thispagestyle{fancy}
