Modify the margins of the bibliography to be 2 in

--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -398,6 +398,7 @@
       \providecommand\phantomsection{} \phantomsection
       \addcontentsline{toc}{chapter}{Bibliography}
       \restoregeometry % restore geometry that was modified by appendix
+      \newgeometry{top=1.125in, bottom=1in, left=1in, right=1in}
       \TEMPbibliography
     }
 
