--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -529,10 +529,10 @@
     \vfill
   }
     \newpage
+    \newgeometry{top=2in, bottom=1in, left=1in, right=1in}
   {
     \singlespacing
     \centering
-    \vspace*{0.75in}
     APPENDIX\space \thechapter \par
     \vspace{1cm}
     \uppercase{#1}\par\nobreak
@@ -540,6 +540,7 @@
     \vspace{-0.60\baselineskip} % to account for double spaced line height
   }
   \doublespacing
+  \restoregeometry
 }
 
 \g@addto@macro\appendix{%
