Revert "Change top margin of Appendices to be exactly 2in"
This reverts commit 540d2adf61501a9fa73761419f00801f6c51cfb5.

--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -530,10 +530,10 @@
     \vfill
   }
     \newpage
-    \newgeometry{top=2in, bottom=1in, left=1in, right=1in}
   {
     \singlespacing
     \centering
+    \vspace*{0.75in}
     APPENDIX\space \thechapter \par
     \vspace{1cm}
     \uppercase{#1}\par\nobreak
@@ -541,7 +541,6 @@
     \vspace{-0.60\baselineskip} % to account for double spaced line height
   }
   \doublespacing
-  \restoregeometry
 }
 
 \g@addto@macro\appendix{%
