Revert "Add vertical space after title in TOC/LOT/LOF"
This reverts commit 60a1f583e07d273d047d635321d8aedc04df6e1a.

--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -322,10 +322,9 @@
     \relax
     \LoadClass[letterpaper,12pt, oneside]{book}
 
-% changes name of lists and adds space after title
-\renewcommand{\contentsname}{TABLE OF CONTENTS\vspace{\baselineskip}}
-\renewcommand\listfigurename{LIST OF FIGURES\vspace{\baselineskip}}
-\renewcommand\listtablename{LIST OF TABLES\vspace{\baselineskip}}
+\renewcommand{\contentsname}{TABLE OF CONTENTS}
+\renewcommand\listfigurename{LIST OF FIGURES}
+\renewcommand\listtablename{LIST OF TABLES}
 \renewcommand{\bibname}{BIBLIOGRAPHY\vspace{\baselineskip}}
 
 
