Add \doublespacing to \@chapter command

--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -526,6 +526,7 @@
                     \chaptermark{#1}%
                     \@makechapterhead{\uppercase{#2}}%
                     \@afterheading
+                    \doublespacing
                     }
 
 
