Add \inappendixfalse to Biography page

--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -245,6 +245,7 @@
 
 
     \newcommand{\biographypage}{%
+      \inappendixfalse
       \chapter*{BIOGRAPHICAL SKETCH}
         \addcontentsline{toc}{chapter}{Biographical Sketch}
           \doublespacing
