Improve \margins command

--- a/UTRGVthesis.cls
+++ b/UTRGVthesis.cls
@@ -610,10 +610,12 @@
     \usepackage{tikz}
     \usetikzlibrary{calc}
     \newcommand{\marginguides}{% For a logo drawn with TikZ
-    \begin{tikzpicture}[remember picture,overlay]
-        \fill [fill=gray!10,line width=0pt] (-2in,-5.5in) rectangle (8.50in, 1in);
-        \fill [fill=gray!40,line width=0pt] (-2in,-2in) rectangle (8.50in, 1in);
-        \fill [fill=gray!10,line width=0pt] (-2in,-1in) rectangle (8.50in, 1in);
+    \begin{tikzpicture}[remember picture,overlay,yscale=-1]
+        \fill [fill=gray!20,line width=0pt] (0in,11in) rectangle (8.5in, 5.5in);
+        \fill [fill=gray!40,line width=0pt] (7.5in,0in) rectangle (8.5in, 11in);
+        \fill [fill=gray!40,line width=0pt] (7.5in,0in) rectangle (8.5in, 11in);
+        \fill [fill=gray!40,line width=0pt] (0in,0in) rectangle (1in, 11in);
+        \fill [fill=gray!50,line width=0pt] (0in,2in) rectangle (8.5in, 1in);
      \end{tikzpicture}
    }
 
