--- a/main.tex
+++ b/main.tex
@@ -26,6 +26,11 @@
 
 
 
+% this sets the name of the bibliography
+% add \vspace{1cm} here to adjust vertical spacing after bibliography title
+\renewcommand{\bibname}{BIBLIOGRAPHY}
+
+
 % Insert your name and major here in the format shown
 \Author{John Q. Citizen}
 \AuthorLastFirst{Citizen, John Q.}
