Add \margins command to main.tex

--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,9 @@
 \usepackage{showkeys} % shows labels during draft mode
 
 
+% Uncomment the line below to check if text is aligned to margins
+%\margins
+
 
 % this sets the name of the bibliography
 % add \vspace{1cm} here to adjust vertical spacing after bibliography title
