Move \appendix to after bibliography

--- a/main.tex
+++ b/main.tex
@@ -126,15 +126,16 @@ A brief biographical sketch of the student is required as part of each thesis.
 \input{introduction.tex}
 
 
-%  Uncomment the following line for appendixes
-%\appendix
-
-
 % This makes the bibliography.
 % Enter your references in the BibTex file "references.bib"
 % You can find bibtex info from Google Scholar.
 \bibliographystyle{siam}
 \bibliography{references}
+
+
+% Uncomment the \appendix macro below for appendices
+% Insert appendix chapters after the macro
+%\appendix
 
 
 % This inserts your Biographical Sketch
