Add %\usepackage[document]{ragged2e} as comment

--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
 \usepackage{microtype} % for better typography
 \usepackage[colorlinks=false]{hyperref}  % for urls
 \usepackage{showkeys} % shows labels during draft mode
+%\usepackage[document]{ragged2e} % uncomment for non-justified text
 
 
 % Uncomment the line below to check if text is aligned to margins
